# AndroidDeferredRenderer

./: CMakeLists.txt  Readme.txt  android-null-toolchain.cmake  android-toolchain.cmake
DeferredShading/: CMakeLists.txt  Doxyfile
DeferredShading/src/: application.cpp  application.h  applicationandroid.cpp  applicationandroid.h  applicationdesktop.cpp  applicationdesktop.h  logging.h  mainandroid.cpp  maindesktop.cpp  plattformopengl.h  timer.cpp  timer.h
DeferredShading/src/animation/: controller.cpp  controller.h  manager.cpp  manager.h
DeferredShading/src/assets/: loader.h  loaderandroid.cpp  loaderandroid.h  loaderdesktop.cpp  loaderdesktop.h  manager.cpp  manager.h
DeferredShading/src/render/: camera.cpp  camera.h  directionallight.cpp  directionallight.h  gbuffer.cpp  gbuffer.h  light.h  material.cpp  material.h  object.cpp  object.h  renderer.cpp  renderer.h  rendertarget.h  shader.cpp  shader.h
DeferredShading/src/render/primitives/: cube.cpp  cube.h  primitive.h  quad.cpp  quad.h
android/: AndroidManifest.xml
android/src/com/sven/opengltest/: OpenGLTestNativeActivity.java
assets/OpenGL4/: directionallight.frag  directionallight.vert  geometry.frag  geometry.vert
assets/OpenGLES3/: directionallight.frag  directionallight.vert  geometry.frag  geometry.vert
